Change title and format code

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import MyPicture from "@/assets/images/my-picture.jpg";
 import { Image } from "astro:assets";
 ---
 
-<Layout title="Yogesh">
+<Layout title="Yogesh S">
 	<main class="p-10 flex flex-col gap-5 font-urbanist text-lg">
 		<div class="flex flex-col sm:flex-row items-center gap-10">
 			<Image
@@ -27,10 +27,9 @@ import { Image } from "astro:assets";
 					class="font-bold text-xl underline decoration-sky-400 hover:text-sky-400"
 					href="https://www.lucioai.com/">
 					Lucio</a
-				> with a knack for building user-friendly and interactive web
-				applications. I thrive in collaborative environments, working
-				closely with cross-functional teams to deliver high-quality
-				solutions.
+				> with a knack for building user-friendly and interactive web applications.
+				I thrive in collaborative environments, working closely with cross-functional
+				teams to deliver high-quality solutions.
 			</p>
 		</div>
 		<div>
