--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets";
 ---
 
 <Layout title="Yogesh S">
-	<main class="p-10 flex flex-col gap-5 font-urbanist text-lg">
+	<main class="p-5 flex flex-col gap-5 font-urbanist text-lg">
 		<div class="flex flex-col sm:flex-row items-center gap-10">
 			<Image
 				height={150}
@@ -34,7 +34,7 @@ import { Image } from "astro:assets";
 		</div>
 		<div>
 			<h2
-				class="font-bold text-4xl hover:text-red-500 underline decoration-red-500 w-fit">
+				class="font-bold cursor-default text-4xl hover:text-red-500 underline decoration-red-500 w-fit">
 				About Me
 			</h2>
 			<p>
