--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -111,7 +111,7 @@ const { title } = Astro.props;
 	</head>
 
 	<body
-		class="bg-white text-black dark:bg-black dark:text-white flex flex-col gap-6 min-h-screen items-start">
+		class="bg-white ml-auto mr-auto max-w-2xl text-black dark:bg-black dark:text-white min-h-screen flex flex-col items-center">
 		<Topbar />
 		<slot />
 		<ContactFooter client:load />
