--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,10 @@
 ---
 import { ViewTransitions } from "astro:transitions";
-import Topbar from "../components/topbar.astro";
+import Topbar from "@/components/topbar.astro";
 import ContactFooter from "@/components/contactFooter.svelte";
+import { fade } from "astro:transitions";
 
-interface Props {
-	title: string;
-}
-
-const { title } = Astro.props;
+const { title } = Astro.props.frontmatter || Astro.props;
 ---
 
 <html lang="en">
@@ -113,7 +110,9 @@ const { title } = Astro.props;
 	<body
 		class="bg-white ml-auto mr-auto max-w-2xl text-black dark:bg-black dark:text-white min-h-screen flex flex-col items-center">
 		<Topbar />
-		<slot />
+		<div transition:animate={fade({ duration: "0.7s" })}>
+			<slot />
+		</div>
 		<ContactFooter client:load />
 	</body>
 </html>
