--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "@/layouts/Layout.astro";
 import MyPicture from "@/assets/images/my-picture.jpg";
 import { Image } from "astro:assets";
+import CurrentPlayer from "@/components/currentPlayer.svelte";
 ---
 
 <Layout title="Yogesh S">
@@ -33,8 +34,7 @@ import { Image } from "astro:assets";
 			</p>
 		</div>
 		<div>
-			<h2
-				class="font-bold cursor-default text-4xl hover:text-red-500 underline decoration-red-500 w-fit">
+			<h2 class="font-bold cursor-default text-4xl text-red-300 w-fit">
 				About Me
 			</h2>
 			<p>
@@ -49,5 +49,6 @@ import { Image } from "astro:assets";
 				functionality.
 			</p>
 		</div>
+		<CurrentPlayer client:load />
 	</main>
 </Layout>
